qt4-x11 (4:4.7.0~rc1-1) UNRELEASED; urgency=low

  * New upstream release.
  * Update debian/control:
    - bump Standards-Version to 3.9.1 (no changes needed).
    - add libopenvg1-mesa-dev build dependency.
    - add libqt4-openvg package.

 -- Fathi Boudra <fabo@debian.org>  Sun, 22 Aug 2010 12:18:20 +0300

qt4-x11 (4:4.7.0~beta2-3) experimental; urgency=low

  * Add 0001_add_webkit_qt_config.patch to load modules .pri files.
    Fix the detection of Qt WebKit when shipped standalone.
  * Update debian/control:
    - remove references to Debian in package descriptions
      (derivatives friendly).
    - add libqtwebkit-dev to libqt4-dev package.
    - remove libpulse-dev build dependency. It's used to build Phonon.

 -- Fathi Boudra <fabo@debian.org>  Tue, 20 Jul 2010 16:55:20 +0300

qt4-x11 (4:4.7.0~beta2-2) experimental; urgency=low

  [ Fathi Boudra ]
  * Remove qt_webkit_version.pri file, installed inconditionaly.
    It conflicts with qt_webkit_version.pri shipped in Qt WebKit.

  [ Modestas Vainius ]
  * Make libqt4-dev conflict with libqtwebkit-dev less broad: (<< 2.0~). The
    latest version which this conflict is supposed to cover is 0~svn29752-1.
  * Add Breaks (or turn Conflicts into Breaks) next to Replaces as recommended
    by policy 3.9.0.
  * Remove conflicts against old (predating etch) qt-x11-free (Qt3) packages.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Tue, 13 Jul 2010 16:20:28 +0300

qt4-x11 (4:4.7.0~beta2-1) experimental; urgency=low

  * New upstream release.
  * Remove Qt Multimedia, Qt MediaServices and Qt WebKit packages.
  * Remove Debian patches:
    - 81_hurd_architecture.diff - merged upstream.
    - 97_alpha_ftbfs_qatomic_alpha_h_types.diff - merged upstream.
  * Update debian/control:
    - bump Standards-Version to 3.9.0.
    - remove libqt4-declarative-widgets package.
    - add libqt4-declarative-folderlistmodel package.
    - add libqt4-declarative-gestures package.