@@ -27,7 +27,7 @@ bugs.kde.org number :
 
 --- a/configure
 +++ b/configure
-@@ -1044,6 +1044,11 @@ while [ "$#" -gt 0 ]; do
+@@ -1045,6 +1045,11 @@ while [ "$#" -gt 0 ]; do
              VAL=`echo $1 | sed 's,-D,,'`
          fi
          ;;
@@ -39,7 +39,7 @@ bugs.kde.org number :
      -I?*|-I)
          VAR="add_ipath"
          if [ "$1" = "-I" ]; then
-@@ -2115,6 +2120,9 @@ while [ "$#" -gt 0 ]; do
+@@ -2119,6 +2124,9 @@ while [ "$#" -gt 0 ]; do
      add_ipath)
          I_FLAGS="$I_FLAGS -I\"${VAL}\""
          ;;
