@@ -3,7 +3,7 @@ It breaks qmake projects search.
 
 --- a/configure
 +++ b/configure
-@@ -8134,7 +8134,7 @@ fi
+@@ -8208,7 +8208,7 @@ fi
  # .projects.3    -> the rest
  rm -f .projects .projects.1 .projects.2 .projects.3
  
