@@ -14,7 +14,7 @@ Last-Update: 2010-05-24
 +LIBS += -lfbclient
 --- a/src/sql/drivers/drivers.pri
 +++ b/src/sql/drivers/drivers.pri
-@@ -91,7 +91,7 @@ contains(sql-drivers, ibase) {
+@@ -89,7 +89,7 @@ contains(sql-drivers, ibase) {
      HEADERS += drivers/ibase/qsql_ibase.h
      SOURCES += drivers/ibase/qsql_ibase.cpp
      
