@@ -5,7 +5,7 @@ This patch enable them.
 
 --- a/src/3rdparty/webkit/WebCore/WebCore.pro
 +++ b/src/3rdparty/webkit/WebCore/WebCore.pro
-@@ -2926,8 +2926,6 @@ HEADERS += $$WEBKIT_API_HEADERS
+@@ -2943,8 +2943,6 @@ HEADERS += $$WEBKIT_API_HEADERS
  
  CONFIG(QTDIR_build) {
      # Remove the following 2 lines if you want debug information in WebCore
@@ -13,7 +13,7 @@ This patch enable them.
 -    CONFIG += no_debug_info
  }
  
- !win32-g++:win32:contains(QMAKE_HOST.arch, x86_64):{
+ win32:!win32-g++*:contains(QMAKE_HOST.arch, x86_64):{
 --- a/src/qt3support/qt3support.pro
 +++ b/src/qt3support/qt3support.pro
 @@ -34,6 +34,3 @@ MOCDIR = .moc
