@@ -53,7 +53,7 @@ a real problem yet.
 @@ -182,10 +182,7 @@ namespace WTF {
          Node* m_freeList;
          bool m_isDoneWithInitialFreeList;
-         static const size_t m_poolSize = 256;
+         static const size_t m_poolSize = inlineCapacity;
 -        union {
 -            char pool[sizeof(Node) * m_poolSize];
 -            double forAlignment;
@@ -61,7 +61,7 @@ a real problem yet.
 +        uint32_t m_pool[(sizeof(Node) * m_poolSize + sizeof(uint32_t) - 1) / sizeof(uint32_t)];
      };
  
-     template<typename ValueArg> struct ListHashSetNode {
+     template<typename ValueArg, size_t inlineCapacity> struct ListHashSetNode {
 --- a/src/3rdparty/webkit/WebCore/platform/text/AtomicString.cpp
 +++ b/src/3rdparty/webkit/WebCore/platform/text/AtomicString.cpp
 @@ -103,9 +103,9 @@ static inline bool equal(StringImpl* str
