@@ -15,7 +15,7 @@ Bug: https://bugs.webkit.org/show_bug.cgi?id=33903
  
 --- a/src/3rdparty/javascriptcore/JavaScriptCore/wtf/Platform.h
 +++ b/src/3rdparty/javascriptcore/JavaScriptCore/wtf/Platform.h
-@@ -388,7 +388,7 @@
+@@ -393,7 +393,7 @@
  #endif
  
  /* OS(LINUX) - Linux */
