@@ -15,7 +15,7 @@ Forward: not-needed
 
 --- a/src/corelib/tools/qstring.cpp
 +++ b/src/corelib/tools/qstring.cpp
-@@ -5428,6 +5428,11 @@ QString &QString::vsprintf(const char* c
+@@ -5432,6 +5432,11 @@ QString &QString::vsprintf(const char* c
      return *this;
  }
  
